--- a/edu.jorge.proyectodaw/src/main/resources/application.yml
+++ b/edu.jorge.proyectodaw/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     active: dev
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update #create-drop
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     defer-datasource-initialization: true
