--- a/edu.jorge.proyectodaw/pom.xml
+++ b/edu.jorge.proyectodaw/pom.xml
@@ -115,6 +115,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.4.5</version>
 		</dependency>
+
+		<!-- Stripe -->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>22.20.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
