--- a/edu.jorge.proyectodaw/frontend/proyecto-react/package.json
+++ b/edu.jorge.proyectodaw/frontend/proyecto-react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
+    "@stripe/stripe-js": "^7.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
