--- a/edu.jorge.proyectodaw/frontend/proyecto-react/package.json
+++ b/edu.jorge.proyectodaw/frontend/proyecto-react/package.json
@@ -13,7 +13,9 @@
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
     "@stripe/stripe-js": "^7.3.1",
+    "chart.js": "^4.4.9",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
   },
